overflow fix mobile

--- a/Resources/css/styles.css
+++ b/Resources/css/styles.css
@@ -374,6 +374,8 @@
         margin: 0;
         text-align: left;
         font-family: 'Montserrat', sans-serif;
+        overflow-x: hidden;
+        position: relative;
     }
 
     nav {
@@ -661,7 +663,7 @@
     .circlewrap {
         align-items: center;
         display: flex;
-        height: 100vh;
+        height: 80vh;
         justify-content: center;
         margin: 0;
     }
@@ -711,7 +713,7 @@
         text-align: center;
         position: absolute;
         width: 100vw;
-        height: 100vh;
+        height: 80vh;
         justify-content: center;
         align-items: center;
         z-index: 2;
